syntax = "proto3";
package greeterpackage;

service Greeter {
  // Sends a greeting
  rpc UnaryTest (TestRequest) returns (TestResponse) {}
  rpc ClientStreamTest (stream TestRequest) returns (TestResponse) {}
  rpc ServerStreamTest (TestRequest) returns (stream TestResponse) {}
  rpc BidiStreamTest (stream TestRequest) returns (stream TestResponse) {}
}

// The request message containing the user's name.
message TestRequest {
  string name = 1;
}

// The response message containing the greetings
message TestResponse {
  string message = 1;
}